--- a/Device management software/Views/Categories/Index.cshtml
+++ b/Device management software/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Device_management_software.Models.Category>
+﻿@model IEnumerable<Device_management_software.Models.Dtos.Responses.Category.CategoryResponse>
 
 @{
     ViewData["Title"] = "Index";
