--- a/Device management software/Views/Devices/Details.cshtml
+++ b/Device management software/Views/Devices/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Device_management_software.Models.Device
+﻿@model Device_management_software.Models.Dtos.Responses.Device.DeviceResponse
 
 @{
     ViewData["Title"] = "Details";
