--- a/Device management software/Views/Users/Index.cshtml
+++ b/Device management software/Views/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Device_management_software.Models.User>
+﻿@model IEnumerable<Device_management_software.Models.Dtos.Responses.User.UserResponse>
 
 @{
     ViewData["Title"] = "Index";
