--- a/Device management software/Views/Categories/Create.cshtml
+++ b/Device management software/Views/Categories/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Device_management_software.Models.Category
+﻿@model Device_management_software.Models.Dtos.Requests.Category.CategoryRequest
 
 @{
     ViewData["Title"] = "Create";
