--- a/Device management software/Views/Devices/Create.cshtml
+++ b/Device management software/Views/Devices/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Device_management_software.Models.Device
+﻿@model Device_management_software.Models.Dtos.Requests.Device.DeviceRequest
 
 @{
     ViewData["Title"] = "Create";
@@ -23,7 +23,7 @@
                 <span asp-validation-for="Code" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Category" class="control-label"></label>
+                <label asp-for="CategoryId" class="control-label"></label>
                 <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId">
                     <option>Select category</option>
                 </select>
@@ -47,5 +47,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
