--- a/Device management software/Views/Devices/Delete.cshtml
+++ b/Device management software/Views/Devices/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Device_management_software.Models.Device
+﻿@model Device_management_software.Models.Dtos.Responses.Device.DeviceResponse
 
 @{
     ViewData["Title"] = "Delete";
@@ -27,7 +27,7 @@
             @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category)
+            @Html.DisplayFor(model => model.Category.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Status)
