--- a/Device management software/Views/Devices/Edit.cshtml
+++ b/Device management software/Views/Devices/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Device_management_software.Models.Device
+﻿@model Device_management_software.Models.Dtos.Requests.Device.DeviceRequest
 
 @{
     ViewData["Title"] = "Edit";
@@ -12,7 +12,6 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -24,15 +23,14 @@
                 <span asp-validation-for="Code" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Category" class="control-label"></label>
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId">
-                    <option>Select category</option>
-                </select>
+                <label asp-for="CategoryId" class="control-label"></label>
+                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
+                <select class="form-control" asp-items="@((List<SelectListItem>)ViewBag.StatusList)" asp-for="Status">
+                </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
