--- a/Device management software/Views/Users/Create.cshtml
+++ b/Device management software/Views/Users/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Device_management_software.Models.User
+﻿@model Device_management_software.Models.Dtos.Requests.User.UserRequest
 
 @{
     ViewData["Title"] = "Create";
@@ -29,7 +29,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Role" class="control-label"></label>
-                <input asp-for="Role" class="form-control" />
+                <select class="form-control" asp-items="@((List<SelectListItem>)ViewBag.RoleList)" asp-for="Role">
+                </select>
                 <span asp-validation-for="Role" class="text-danger"></span>
             </div>
             <div class="form-group">
