--- a/Device management software/Views/Users/Edit.cshtml
+++ b/Device management software/Views/Users/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿@model Device_management_software.Models.User
-
+﻿@model Device_management_software.Models.Dtos.Requests.User.UserRequest
 @{
     ViewData["Title"] = "Edit";
 }
@@ -12,7 +11,6 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -30,7 +28,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Role" class="control-label"></label>
-                <input asp-for="Role" class="form-control" />
+                <select class="form-control" asp-items="@((List<SelectListItem>)ViewBag.RoleList)" asp-for="Role">
+                </select>
                 <span asp-validation-for="Role" class="text-danger"></span>
             </div>
             <div class="form-group">
